[tool.poetry]
name = "pastebin"
version = "0.1.0"
description = ""
authors = ["azamat-medenov <medenovvaza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.104.0"}
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.22"
alembic = "^1.12.1"
email-validator = "^2.1.0.post1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
types-passlib = "^1.7.7.13"


[tool.poetry.group.nondev.dependencies]
ruff = "^0.1.2"
mypy = "^1.6.1"
sqlalchemy = {extras = ["mypy"], version = "^2.0.22"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
