[tool.poetry]
name = "pastebin"
version = "0.1.0"
description = ""
authors = ["azamat-medenov <medenovvaza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["all"], version = "^0.104.0" }
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.22"
alembic = "^1.12.1"
email-validator = "^2.1.0.post1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
types-passlib = "^1.7.7.13"
aioboto3 = "^12.2.0"
pydantic = {extras = ["mypy"], version = "^2.6.1"}


[tool.poetry.group.nondev.dependencies]
ruff = "^0.1.2"
sqlalchemy = { extras = ["mypy"], version = "^2.0.22" }
black = "^24.2.0"
isort = "^5.13.2"
mypy = {extras = ["pydantic"], version = "^1.8.0"}


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
httpx = "^0.25.1"
types-aioboto3 = { extras = ["s3"], version = "^12.2.0" }
pre-commit = "^3.6.2"

[tool.black]
line-length = 88
exclude = ["/migrations/", "__init__.py"]
skip-string-normalization = true

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
